Update to version 1.9.5